fix: update spacing and add useBreakpoints hook

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -9,3 +9,7 @@
 
 /* custom */
 @import './custom.css';
+
+* {
+    border: 1px solid red !important;
+}
